# python-fox

./: .pre-commit-config.yaml  README.md  setup.cfg
fox/: __init__.py  __main__.py
