[metadata]
name = fox
version = 0.0.1
description = Fast Python automated task runner (test runner)
long_description = file: README.md
long_description_content_type = text/markdown
author = Filipe Laíns
author_email = lains@riseup.net
license = EUPL1.2
license_file = LICENSE
classifiers =
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
url = https://github.com/FFY00/python-fox

[options]
packages = find:
python_requires = >=3.6, <4
install_requires =
    tqdm

[options.entry_points]
console_scripts =
    fox = fox.__main__:entrypoint

[options.extras_require]
test =
    pytest
    pytest-cov

[flake8]
max-line-length = 127
max-complexity = 10

[mypy]
ignore_missing_imports = True
strict = True

[isort]
line_length = 127
lines_between_types = 1
lines_after_imports = 2
known_first_party = fox
default_section = THIRDPARTY

[coverage:run]
omit =
    setup.py

[coverage:paths]
source =
    src

[coverage:html]
show_contexts = true
